Update styles and curriculum section; add overflow-x hidden to prevent horizontal scroll and enhance CV layout

--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -1,9 +1,14 @@
 @import '../../../styles.scss';
+body{
+    overflow-x: hidden;
+}
+
 
 .glass {
     background-color: rgba(#1A2F3D, 0.8);
     width: 100%;
     height: 100%;
+    padding-bottom: 40px;
 }
 
 
