--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,8 @@ html {
 
 body {
     margin: 0px;
+    overflow-x: hidden;
+
 }
 
 /* Importing Bootstrap SCSS file. */
